Fix broken style rule

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
     color: #333;
-    background-color: ddd;
+    background-color: #ddd;
 }
 
